--- a/datatags-app/app/views/templates/bsBase.scala.html
+++ b/datatags-app/app/views/templates/bsBase.scala.html
@@ -9,7 +9,7 @@
 
     <link href="@routes.Assets.at("/css/font-awesome.min.css")" rel="stylesheet">
     <link href="@routes.Assets.at("/lib/bootstrap/css/bootstrap.min.css")" rel="stylesheet">
-    <link rel="stylesheet" href="@routes.Assets.at("vnd/swal/sweetalert.css")">
+    <link rel="stylesheet" href="@routes.Assets.at("lib/sweetalert/css/sweetalert.css")">
     <link rel="stylesheet" href="@routes.Assets.at("css/main.min.css")">
 	  <link rel="stylesheet" href="@routes.Assets.at("css/tags.min.css")">
 	  <link rel="stylesheet" href="@routes.Assets.at("css/styledInputs.min.css")">
@@ -45,7 +45,7 @@
     <script src="@routes.Assets.at("js/jquery.min.js")"></script>
     <script src="@routes.Assets.at("lib/popper.js/umd/popper.js")"></script>
     <script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.min.js")"></script>
-    <script src="@routes.Assets.at("vnd/swal/sweetalert.min.js")"></script>
+    <script src="@routes.Assets.at("lib/sweetalert/dist/sweetalert.min.js")"></script>
     <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
     <script src="@routes.Assets.versioned("js/JsUtils.js")"></script>
     <script src="@routes.Assets.versioned("js/Comments.js")"></script>
