--- a/datatags-app/app/views/templates/bsBase.scala.html
+++ b/datatags-app/app/views/templates/bsBase.scala.html
@@ -41,7 +41,7 @@
       </ul>
     </div>
   </footer>   
-    <script src="@routes.Assets.at("js/jquery.min.js")"></script>
+    <script src="@routes.Assets.at("lib/jquery/jquery.min.js")"></script>
     <script src="@routes.Assets.at("lib/popper.js/umd/popper.js")"></script>
     <script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.min.js")"></script>
     <script src="@routes.Assets.at("lib/sweetalert/sweetalert.min.js")"></script>
