Escaping tooltip values in policy space display

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -90,6 +90,10 @@ h1, h2, h3 {
   .answerButtonCtnr {
     text-align: center;
 
+    .btn {
+      margin: 0.2em 0;
+    }
+
     button.toggleNoteBtn {
       background-color: transparent;
       border: 1px solid #6c757d;
@@ -401,12 +405,23 @@ footer {
 
 .allQuestions {
 
-  .section {
+  .node {
     border-radius: 0.5em;
-    border: rgba(0,0,0,.5);
-    background-color: rgba(0,0,0,.1);
+    border: 1px solid rgba(0,0,0,.5);
     padding: 1em;
     margin: 1em 0;
+  }
+
+  .section {
+    background-color: rgba(0,0,0,.1);
+  }
+
+  .part {
+    background-color: rgba(0,0,128,.1);
+  }
+
+  .call {
+
   }
 }
 
