Updated PoMo lib. Consulting localization direction flag (closes #80)

--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -10,10 +10,11 @@
 }
 
 @extraHead = {
-  @if(Helpers.isRtl(session.localization.map(_.getLanguage).getOrElse(""))){
-    <link rel="stylesheet" href="@routes.Assets.at("css/rtl.min.css")">
-  }
+@if(session.localization.exists(_.isRtl)){
+  <link rel="stylesheet" href="@routes.Assets.at("css/rtl.min.css")">
 }
+}
+
 
 @templates.bsNavBar("Dataset Accepted", 'ask, scripts, extraHead) {
   <div class="row my-2">
