--- a/datatags-app/app/views/interview/question.scala.html
+++ b/datatags-app/app/views/interview/question.scala.html
@@ -10,7 +10,7 @@
 }
 
 @extraHead = {
-  @if(Helpers.isRtl(session.localization.map(_.getLanguage).getOrElse(""))){
+  @if(session.localization.exists(_.isRtl)){
     <link rel="stylesheet" href="@routes.Assets.at("css/rtl.min.css")">
   }
 }
