--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -97,6 +97,7 @@ h1, h2, h3 {
     button.toggleNoteBtn {
       background-color: transparent;
       border: 1px solid #6c757d;
+      border-top: none;
       font-size: 0.7em;
       border-radius: 0 0 5px 5px;
       position: absolute;
@@ -108,6 +109,20 @@ h1, h2, h3 {
         background-color: white;
       }
     }
+  }
+}
+
+.nodeIdBadge {
+  font-family: "Source Code Pro", "Monaco", "Ubuntu Mono Regular", "Lucida Console", monospace;
+  font-size: 9pt;
+  color: white;
+  border: 1px solid white;
+  border-radius: 3px;
+  padding: 3px;
+  opacity: 0.6;
+  transition: opacity ease-out 0.5s;
+  &:hover {
+    opacity: 1;
   }
 }
 
