--- a/datatags-app/app/views/comps/tagType.scala.html
+++ b/datatags-app/app/views/comps/tagType.scala.html
@@ -1,7 +1,7 @@
 @import edu.harvard.iq.datatags.externaltexts.Localization
 @import edu.harvard.iq.datatags.model.slots.AbstractSlot
 @import edu.harvard.iq.datatags.model.slots._
-@( tagType:AbstractSlot, loc:Option[Localization])
+@( tagType:AbstractSlot, loc:Localization)
 
 
 @simpleType( tp: AtomicSlot ) = {
