--- a/datatags-app/app/views/comps/tagValue.scala.html
+++ b/datatags-app/app/views/comps/tagValue.scala.html
@@ -1,7 +1,7 @@
 @import edu.harvard.iq.datatags.externaltexts.Localization
 @import edu.harvard.iq.datatags.model.values._
 @( aValue: AbstractValue,
-   loc:Option[Localization]
+   loc:Localization
 )
 @atomicValue( value:AtomicValue ) = {
   <div class="value value-simple">
