--- a/datatags-app/app/views/interview/rejected.scala.html
+++ b/datatags-app/app/views/interview/rejected.scala.html
@@ -7,7 +7,7 @@
 
 
 @extraHead = {
-@if(session.localization.exists(_.isRtl)){
+@if(session.localization.isRtl){
   <link rel="stylesheet" href="@routes.Assets.at("css/rtl.min.css")">
 }
 }
