Issue #81: Bettre RTL support

--- a/datatags-app/app/assets/css/rtl.less
+++ b/datatags-app/app/assets/css/rtl.less
@@ -38,6 +38,17 @@ body {
   direction: rtl;
 }
 
+.float-eol {
+  float:left;
+}
+
+.commentComponent {
+  .commentFormDiv {
+    right: auto;
+    left: 0;
+  }
+}
+
 @inputGroupBorderRadius: 0.25rem;
 
 .input-group > .input-group-append:last-child > .btn:not(:last-child):not(.dropdown-toggle), .input-group > .input-group-append:last-child > .input-group-text:not(:last-child), .input-group > .input-group-append:not(:last-child) > .btn, .input-group > .input-group-append:not(:last-child) > .input-group-text, .input-group > .input-group-prepend > .btn, .input-group > .input-group-prepend > .input-group-text {
