--- a/datatags-app/app/views/interview/showReadme.scala.html
+++ b/datatags-app/app/views/interview/showReadme.scala.html
@@ -30,7 +30,7 @@
   <div class="col-md-12">
     <div class="mdRender">
       @if( qKit.md.commentingStatus != CommentingStatus.Closed ) {
-        <div class="float-right">
+        <div class="float-eol">
         @comps.comments("cmntReadme", qKit.md.id.modelId, qKit.md.id.version, loc.map(_.getLanguage), "meta", "readme")
         </div>}
       @Helpers.render(readme)
@@ -41,7 +41,7 @@
     <div class="col-md-12">
       <h3>
         @if( qKit.md.commentingStatus != CommentingStatus.Closed ) {
-          <div class="float-right">
+          <div class="float-eol">
           @comps.comments("cmntPS", qKit.md.id.modelId, qKit.md.id.version, loc.map(_.getLanguage), "meta", "policy-space")
           </div>}
         Policy Space</h3>
