RTL support for #81 done (closes #81)

--- a/datatags-app/app/views/interview/question.scala.html
+++ b/datatags-app/app/views/interview/question.scala.html
@@ -19,7 +19,7 @@
   <div class="row">
     <div class="col">
       <a href="@routes.InterviewCtrl.startInterview(session.kit.md.id.modelId, session.kit.md.id.version, Some(session.localization.getLanguage))">
-        <i class="fa fa-arrow-left"></i> Intro
+        @comps.backArrow(session.localization) Intro
       </a>
       <br>
     </div>
