--- a/datatags-app/app/assets/css/rtl.less
+++ b/datatags-app/app/assets/css/rtl.less
@@ -50,7 +50,22 @@ body {
     .buttonBar{
       text-align: left;
     }
+  }
+}
 
+nav.navbar ul.nav {
+  margin-right: auto;
+  margin-left: 0 !important;
+}
+
+.transcript .question .questionSectionAnswer {
+  h6 {
+    margin: .5em 0 .5em .5em;
+    border-left: 1px solid #DDD;
+    border-right: none;
+  }
+  .text {
+    text-align: left;
   }
 }
 
@@ -72,3 +87,4 @@ body {
 .input-group > .custom-select:not(:last-child), .input-group > .form-control:not(:last-child) {
   border-radius: 0 @inputGroupBorderRadius @inputGroupBorderRadius 0;
 }
+
