--- a/datatags-app/app/views/comps/questionPanel.scala.html
+++ b/datatags-app/app/views/comps/questionPanel.scala.html
@@ -8,16 +8,16 @@
     <div class="flex-grow-1">
       Question: Please select one answer
     </div>
-    @if( showId ){
-      <div class="mx-2"><span class="nodeIdBadge">@questionNode.getId</span></div>
-    }
-    @if( enableComments ){
+    @if( enableComments ) {
       <div>
-      @comps.comments("cmnt_" + questionNode.getId.filter(Character.isLetterOrDigit), versionKit.md.id.modelId, versionKit.md.id.version, loc.getLanguage, "node", questionNode.getId, "btn-outline-light")
+          @comps.comments("cmnt_" + questionNode.getId.filter(Character.isLetterOrDigit),
+                            versionKit.md.id.modelId, versionKit.md.id.version, loc.getLanguage,
+                            "node", questionNode.getId, "btn-outline-light")
       </div>
     }
   </div>
   <div class="card-body">
+    @if(showId){<span class="nodeIdBadge nodeIdBadge-dark">@questionNode.getId</span>}
     @defining( loc.getNodeText(questionNode.getId)
             .orElse(Helpers.askNodeToMarkdown(questionNode))){ nodeText =>
       @Helpers.renderMarkdown( nodeText )
