--- a/datatags-app/app/views/interview/question.scala.html
+++ b/datatags-app/app/views/interview/question.scala.html
@@ -55,20 +55,19 @@
               Current Tags
           </div>
           <div class="card-body">
-              <ul class="list-unstyled">
-                  @if( session.tags.getNonEmptySubSlots.isEmpty ) {
-                      <div class="well well-sm text-center">
-                          <span class="muted small">This space will contain the resultant policy. It will be updated as we go along.</span>
-                      </div>
-                  } else {
-                      @comps.tagValue(session.tags, session.localization)
-                  }
-              </ul>
+            @if( session.tags.getNonEmptySubSlots.isEmpty ) {
+                <div class="well well-sm text-center">
+                    <span class="muted small">This space will contain the resultant policy. It will be updated as we go along.</span>
+                </div>
+            } else {
+                @comps.tagValue(session.tags, session.localization)
+            }
           </div>
       </div>
   </div>
 </div>
-<div class="row">
+@* This is the engine trace. Might be useful sometimes, so leaving this here for now.
+  <div class="row">
   <div class="col">
       <div class="card m-2">
           <div class="card-header text-muted">
@@ -98,4 +97,5 @@
       </div>
   </div>
 </div>
+  *@
 }
