mobile cleanup done --- for now. (closes #77)

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -120,6 +120,15 @@ h1, h2, h3 {
   }
 }
 
+@media (max-width: 576px) {
+  .questionPanel .answerButtonCtnr .btn {
+    display: block;
+    margin: .5em auto;
+    width: auto;
+  }
+}
+
+
 .nodeIdBadge {
   font-family: "Source Code Pro", "Monaco", "Ubuntu Mono Regular", "Lucida Console", monospace;
   font-size: 9pt;
