--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -7,6 +7,7 @@
 @scripts = {
     <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
     <script type="text/javascript" src="@routes.Assets.at("js/Question.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("js/tagValueDetailed.js")"></script>
 }
 
 @extraHead = {
@@ -37,7 +38,7 @@
               }
             </div>
           }
-          @comps.tagValue(session.tags, session.localization)
+          @comps.tagValueDetailed(session.tags, session.localization)
 
           <div class="text-center mt-2">
             <a href="@routes.InterviewCtrl.downloadTags" class="btn btn-primary">
