application data moved outside of public (closes #72)

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -362,6 +362,7 @@ table.engine-trace {
 @theme5: #FFD799;
 
 .tagvalue-container {
+
   ul {
     list-style: none;
     padding: 0;
@@ -382,7 +383,7 @@ table.engine-trace {
   .valueAtom{
     background-color: @theme3;
     border-color: @theme1;
-    color: #000;
+    color: @theme1;
   }
 }
 
@@ -424,6 +425,10 @@ table.engine-trace {
     border-radius: 1em;
     padding: 1em;
     margin: 1em;
+  }
+
+  h3 {
+    margin: 0;
   }
 }
 
