--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -17,7 +17,7 @@
 }
 
 
-@templates.bsNavBar("Dataset Accepted", 'ask, scripts, extraHead) {
+@templates.bsNavBar("Interview Completed", 'ask, scripts, extraHead) {
   <div class="row my-2">
     <div class="col">
       <div class="card">
